--- a/debugging_css/style.css
+++ b/debugging_css/style.css
@@ -1,7 +1,7 @@
 /* General styles */
 html {
   font-family: 'Helvetica neue', Arial, 'sans serif';
-  font-size: -16px;
+  font-size: 16px;
 }
 
 body {
@@ -24,8 +24,8 @@ pl,i {
 
 /* header and footer */
 header, footer {
-  background-colour: #7cb342;
-  height: 10em
+  background-color: #7cb342;
+  height: 10em;
   padding: 2em;
 }
 
@@ -35,7 +35,7 @@ h1, footer p {
 }
 
 footer li {
-  float: left
+  float: left;
   list-style-type: none;
   padding:0.5em;
 }
@@ -59,6 +59,6 @@ main p, main li {
 }
 
 img {
-  float: left
+  float: left;
   margin: 1.2em 2em;
 }
