--- a/layout_css/style.css
+++ b/layout_css/style.css
@@ -1,35 +1,56 @@
 /* General styles */
 html {
+    font-family: 'Helvetica neue', Arial, 'sans serif';
+    font-size: 19px;
 }
 
-body {
+body { 
+    width: 50em;
+    margin: 0 auto;
 }
 
 /* Typography section */
 h1 {
+    font-size: 3em;
 }
 
 h2 {
+    font-size: 1.8em;
 }
 
 p {
+    width: 100%;
+  clear: left; 
 }
 
 /* main section */
 .main-image {
+    float: left;
+    width: 73%;
+    margin-right: 2%;
 }
 
 .recipe-info {
+    float: right;
+    width: 23%;
+    margin-left: 2%;
 }
 
 .recipe-info dd {
+    font-weight: bold;
 }
 
 .intro-text {
+  
+    padding: 1.5em 0;
+    
 }
 
 section {
+    padding: 1.5em 0;
 }
 
 .ingredients {
+    list-style-type: none;
+    padding: 0;
 }
